# nyxis-drivers

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.githooks/: pre-commit
.github/actions/setup-core/: action.yml
.github/workflows/: README.md  c.yml  csharp.yml  devtools.yml  go.yml  javascript.yml  kotlin.yml  php.yml  publish-c-release.yml  publish-crates.yml  publish-kotlin.yml  publish-npm.yml  publish-nuget.yml  publish-packagist.yml  publish-pypi.yml  publish-rubygems.yml  python.yml  ruby.yml  swift.yml
c/: CMakeLists.txt  Makefile  README.md  bench.c  bench_wal.c  compact.c  compact.h  nxs.c  nxs.h  nxs_column_prefetch.c  nxs_column_prefetch.h  nxs_prefetch.c  nxs_prefetch.h  nxs_writer.c  nxs_writer.h  profile_selective.c  test.c  test_prefetch.c
csharp/: Bench.cs  ColumnPrefetch.cs  ConformanceRunner.cs  Directory.Build.props  NxsQuery.cs  NxsReader.cs  NxsWriter.cs  Pattern.cs  Prefetch.cs  PrefetchEngine.cs  Program.cs  README.md  nxs.csproj
csharp/nxs.Tests/: PrefetchTests.cs  nxs.Tests.csproj
devtools-extension/: README.md  background.js  context.js  devtools-register.js  devtools.html  devtools.js  manifest.json  panel.css  panel.html  panel.js  sync-lib.sh
devtools-extension/lib/: nxs.js  nxs_decode.js
docs/index/: _root.md
docs/index/c/: _root.md  prefetch.md  reader.md
docs/index/devtools/: _root.md  extension.md  panel.md
docs/index/go/: _root.md  prefetch_col.md  reader.md
docs/index/js/: _root.md  prefetch_compile.md  reader.md
docs/index/langs/: _root.md  csharp.md  kotlin.md  php.md  ruby.md  swift.md
docs/index/py/: _root.md  c_ext.md  prefetch.md  reader.md
go/: README.md  bench_wal_test.go  col.go  col_test.go  column_prefetch.go  column_prefetch_test.go  compact.go  fast.go  go.mod  nxs.go  nxs_test.go  pattern.go  pax_stream.go  prefetch.go  prefetch_test.go  producer_roundtrip_test.go  query.go  query_test.go  writer.go
go/cmd/bench/: main.go
js/: README.md  build_compile_wasm.sh  compact.js  eslint.config.js  nxs.js  nxs_compile.js  nxs_compile_wasm.d.ts  nxs_compile_wasm.js  nxs_compile_wasm_bg.wasm  nxs_compile_wasm_bg.wasm.d.ts  nxs_decode.js  nxs_writer.js  package-lock.json  package.json  pattern.js  prefetch.js  sparse_bytes.js  test.js  test_wasm.js  wasm.js
js/test/: prefetch.test.js
js/wasm/: PROVENANCE.md  README.md  nxs_reducers.wasm
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
php/: Nxs.php  NxsWriter.php  Pattern.php  Prefetch.php  README.md  bench.php  bench_c.php  composer.json  test.php  test_prefetch.php
php/nxs_ext/: build.sh  config.h.in  config.m4  nxs_ext.c
py/: README.md  _nxs.c  bench.py  bench_c.py  bench_wal.py  build_ext.sh  nxs.py  nxs_writer.py  pattern.py  pyproject.toml  test_c_ext.py  test_nxs.py  test_prefetch.py
ruby/: .rubocop.yml  LICENSE  README.md  bench.rb  bench_c.rb  bench_wal.rb  nxs.rb  nxs_writer.rb  nyxis.gemspec  pattern.rb  test.rb  test_c_ext.rb  test_prefetch.rb
ruby/ext/: build.sh
ruby/ext/nxs/: extconf.rb  nxs_ext.c
swift/: .swiftlint.yml  Package.swift  README.md
swift/Sources/Bench/: main.swift
swift/Sources/Conformance/: main.swift
swift/Sources/NXS/: ColLayout.swift  ColumnPrefetch.swift  NXSReader.swift  NXSWriter.swift  Pattern.swift  Prefetch.swift  PrefetchLifecycle.swift  (+2 more)
(+13 files in other folders)
